--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,11 +1,9 @@
 ---
 export interface Props {
-	title: string;
-	body: string;
-	href: string;
+	post: any;
 }
-
-const { href, title, body } = Astro.props;
+const { post } = Astro.props;
+const { href, title, body } = post.frontmatter;
 ---
 
 <li class="link-card">
