--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Card from '../components/Card.astro'
+
+let allPosts = await Astro.glob('./posts/*.md')
 ---
 
 <Layout title="Welcome to Astro.">
@@ -11,7 +13,7 @@ import Card from '../components/Card.astro';
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
 		</p>
 		<ul role="list" class="link-card-grid">
-			<Card
+			<!-- <Card
 				href="https://docs.astro.build/"
 				title="Documentation"
 				body="Learn how Astro works and explore the official API docs."
@@ -30,7 +32,8 @@ import Card from '../components/Card.astro';
 				href="https://astro.build/chat/"
 				title="Community"
 				body="Come say hi to our amazing Discord community. ❤️"
-			/>
+			/> -->
+			{allPosts.map((p) => <Card post={p} />)}
 		</ul>
 	</main>
 </Layout>
