--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -60,7 +60,7 @@ import '../styles/index.css';
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script
   async
-  src="https://www.googletagmanager.com/gtag/js?id=G-TEL60V1WM9"
+  src=""
   is:inline
 ></script>
 <script>
