--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -18,14 +18,14 @@ import HeaderLink from './HeaderLink.astro';
       </a>
     </div>
     <div style="flex-grow: 1;" class="text-right md:mr-1 mr-0">
-      <HeaderLink href="http://tw93.fun/" target="_blank">Blog</HeaderLink>
+      <HeaderLink href="" target="_blank">Blog</HeaderLink>
 
-      <HeaderLink href="https://twitter.com/HiTw93" target="_blank"
+      <HeaderLink href="" target="_blank"
         >Twitter</HeaderLink
       >
 
       <HeaderLink
-        href="https://github.com/tw93"
+        href="https://github.com/hadesxiong"
         target="_blank"
         class="lg:inline-block hidden">GitHub</HeaderLink
       >
