--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -10,20 +10,25 @@ import '../styles/index.css';
 <link
   rel="icon"
   type="image/svg+xml"
-  href="https://gw.alipayobjects.com/zos/k/qv/coffee-2-icon.png"
+  href="https://pmfeeds.bearman.xyz/weekly/noodles.png"
 />
 <link
   rel="alternate icon"
   type="image/x-icon"
-  href="https://gw.alipayobjects.com/zos/k/qv/coffee-2-icon.png"
+  href="https://pmfeeds.bearman.xyz/weekly/noodles.png"
 />
 
-<link rel="sitemap" href="/sitemap.xml" />
+<!-- <link rel="sitemap" href="/sitemap.xml" /> -->
 
 <!-- Preload Fonts -->
 <link
   rel="stylesheet"
   href="https://gw.alipayobjects.com/os/k/webfont/style.css"
+/>
+
+<link
+  rel="stylesheet"
+  href="https://gw.alipayobjects.com/os/k/font/lxgwwenkaiscreenr.css"
 />
 
 <script
@@ -63,7 +68,7 @@ import '../styles/index.css';
   src=""
   is:inline
 ></script>
-<script>
+<!-- <script>
   // @ts-ignore
   window.dataLayer = window.dataLayer || [];
   function gtag() {
@@ -74,4 +79,4 @@ import '../styles/index.css';
   gtag('js', new Date());
   // @ts-ignore
   gtag('config', 'G-RP9WWK86CZ');
-</script>
+</script> -->
