--- a/src/components/Header/AstroLogo.astro
+++ b/src/components/Header/AstroLogo.astro
@@ -2,4 +2,4 @@
 const { size } = Astro.props;
 ---
 
-<img src="" width={size} height={size}/>
+<img src="https://pmfeeds.bearman.xyz/weekly/noodles.png" width={size} height={size}/>
