--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const content = {};
   <head>
     <HeadCommon />
     <HeadSEO canonicalURL={SITE.url} content={content} />
-    <title>潮流周刊</title>
+    <title>PM-Weekly</title>
     <link rel="stylesheet" href="/src/styles/index.css">
   </head>
 
