--- a/src/components/Card/Card.astro
+++ b/src/components/Card/Card.astro
@@ -22,15 +22,12 @@ const { pic, desc, date } = post.frontmatter;
     class="w-full flex justify-between items-center leading-tight pt-4 pl-3 pr-3"
   >
     <div class="font-bold text-black">{title}</div>
-    <div class="text-grey-darker text-sm text-gray-500">{date}</div>
+    <div class="text-grey-darker text-sm text-gray-500 font-bold">{date}</div>
   </div>
   <p
-    class="text-gray-500 text-sm md:w-78 w-94 overflow-hidden pt-2.5 line-clamp-2 px-3"
+    class="w-full min-3125 text-gray-500 text-sm md:w-78 w-94 overflow-hidden pt-2.5 line-clamp-2 px-3"
   >
     {desc}
   </p>
 </a>
 
-<style>
-
-</style>
