--- a/src/components/Header/HeaderLink.astro
+++ b/src/components/Header/HeaderLink.astro
@@ -20,6 +20,6 @@ const isActive = href === Astro.url.pathname.replace(/\/$/, '');
   }
   a.active {
     font-weight: bolder;
-    text-decoration: underline;
+    text-decoration: none;
   }
 </style>
