--- a/src/layouts/post.astro
+++ b/src/layouts/post.astro
@@ -184,13 +184,12 @@ const content = {
           <hr />
           <p class="mt-10 text-black">发布日期：{date}</p>
         </div>
-        <!-- <script
-          src="https://giscus.app/client.js"
-          data-repo="tw93/weekly"
-          data-repo-id="R_kgDOG4TsQA"
+        <script src="https://giscus.app/client.js"
+          data-repo="hadesxiong/pm-weekly"
+          data-repo-id="R_kgDOJlkjEQ"
           data-category="General"
-          data-category-id="DIC_kwDOG4TsQM4CR4bV"
-          data-mapping="title"
+          data-category-id="DIC_kwDOJlkjEc4CXaWb"
+          data-mapping="pathname"
           data-strict="0"
           data-reactions-enabled="1"
           data-emit-metadata="0"
@@ -199,8 +198,8 @@ const content = {
           data-lang="zh-CN"
           data-loading="lazy"
           crossorigin="anonymous"
-          async
-        ></script> -->
+          async>
+        </script>
       </div>
     </main>
   </body>
