--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -18,7 +18,7 @@ import HeaderLink from './HeaderLink.astro';
       </a>
     </div>
     <div style="flex-grow: 1;" class="text-right md:mr-1 mr-0">
-      <!-- <HeaderLink href="" target="_blank" style="text-decoration:none;font-weight:bolder;">Blog</HeaderLink> -->
+      <HeaderLink href="" target="_blank" style="text-decoration:none;font-weight:bolder;">WeChat</HeaderLink>
 
       <!-- <HeaderLink href="" target="_blank" style="text-decoration:none;font-weight:bolder;">Twitter</HeaderLink> -->
 
@@ -27,7 +27,7 @@ import HeaderLink from './HeaderLink.astro';
         target="_blank"
         class="lg:inline-block hidden">GitHub</HeaderLink
       >
-      <!-- <HeaderLink href="/rss.xml" target="_blank" class="lg:inline-block hidden">RSS</HeaderLink> -->
+      <HeaderLink href="/rss.xml" target="_blank" class="lg:inline-block hidden">RSS</HeaderLink>
     </div>
   </nav>
 </header>
