--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const content = {};
 <html lang="ch">
   <head>
     <HeadCommon />
-    <HeadSEO canonicalURL={SITE.url} content={content} />
+    <!-- <HeadSEO canonicalURL={SITE.url} content={content} /> -->
     <title>PM-Weekly</title>
     <link rel="stylesheet" href="/src/styles/index.css">
   </head>
