--- a/src/layouts/post.astro
+++ b/src/layouts/post.astro
@@ -190,7 +190,9 @@ const content = {
             <p>
               {next_page && <span style="color:#a67c52"><a href={next_page}>下一篇</a> | </span>}
               {last_page && <span style="color:#a67c52"><a href={last_page}>上一篇</a> | </span>}
-              <a class="footer_a" href="">去首页</a>
+              <span style="color:#a67c52"><a class="footer_a" href="/">去首页</a> | </span>
+              <span style="color:#a67c52"><a class="footer_a" href="https://github.com/hadesxiong/pm-weekly">Github</a> | </span>
+              <a class="footer_a" href="../../public/wechat.png?x-oss-process=image/resize,w_500">WeChat</a>
             </p>
           </div>
         </div>
