fix path problems

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -18,7 +18,7 @@ import HeaderLink from './HeaderLink.astro';
       </a>
     </div>
     <div style="flex-grow: 1;" class="text-right md:mr-1 mr-0">
-      <HeaderLink href="../../public/wechat.png" target="_blank" style="text-decoration:none;font-weight:bolder;">WeChat</HeaderLink>
+      <HeaderLink href="https://github.com/hadesxiong/pm-weekly/blob/main/public/wechat.png?raw=true" target="_blank" style="text-decoration:none;font-weight:bolder;">WeChat</HeaderLink>
 
       <!-- <HeaderLink href="" target="_blank" style="text-decoration:none;font-weight:bolder;">Telegram</HeaderLink> -->
 
