--- a/src/layouts/post.astro
+++ b/src/layouts/post.astro
@@ -188,11 +188,11 @@ const content = {
           <div style="display:flex;justify-content:space-between;padding-bottom:2rem;">
             <p class="mt-10 text-black">发布日期：<a class="footer_a">{date}</a></p>
             <p>
-              {next_page && <span style="color:#a67c52"><a href={next_page}>下一篇</a> | </span>}
-              {last_page && <span style="color:#a67c52"><a href={last_page}>上一篇</a> | </span>}
-              <span style="color:#a67c52"><a class="footer_a" href="/">去首页</a> | </span>
+              {next_page && <span style="color:#a67c52"><a href={`/pm-weekly/posts/${next_page}`}>下一篇</a> | </span>}
+              {last_page && <span style="color:#a67c52"><a href={`/pm-weekly/posts/${last_page}`}>上一篇</a> | </span>}
+              <span style="color:#a67c52"><a class="footer_a" href="/pm-weekly">去首页</a> | </span>
               <span style="color:#a67c52"><a class="footer_a" href="https://github.com/hadesxiong/pm-weekly">Github</a> | </span>
-              <a class="footer_a" href="../../public/wechat.png?x-oss-process=image/resize,w_500">WeChat</a>
+              <a class="footer_a" href="https://github.com/hadesxiong/pm-weekly/blob/main/public/wechat.png?raw=true">WeChat</a>
             </p>
           </div>
         </div>
