--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -13,7 +13,7 @@ import HeaderLink from './HeaderLink.astro';
       <a href="/" class="logo-image">
         <AstroLogo size={40} />
       </a>
-      <a href="/">
+      <a href="/pm-weekly">
         <h1>{CONFIG.SITE.title}</h1>
       </a>
     </div>
