--- a/src/layouts/post.astro
+++ b/src/layouts/post.astro
@@ -27,7 +27,7 @@ const content = {
 <html lang="ch">
   <head>
     <HeadCommon />
-    <!-- <HeadSEO content={content} canonicalURL={currentPage} /> -->
+    <HeadSEO content={content} canonicalURL={currentPage} />
     <meta name="generator" content={Astro.generator} /><title>
       PM-Weekly{title}
     </title>
