--- a/src/layouts/post.astro
+++ b/src/layouts/post.astro
@@ -188,9 +188,9 @@ const content = {
           <div style="display:flex;justify-content:space-between;padding-bottom:2rem;">
             <p class="mt-10 text-black">发布日期：<a class="footer_a">{date}</a></p>
             <p>
-              {next_page && <span style="color:#a67c52 !important"><a href={`/pm-weekly/posts/${next_page}`}>下一篇</a> | </span>}
-              {last_page && <span style="color:#a67c52 !important"><a href={`/pm-weekly/posts/${last_page}`}>上一篇</a> | </span>}
-              <span style="color:#a67c52 !important"><a class="footer_a" href="/pm-weekly">去首页</a> | </span>
+              {next_page && <span style="color:#a67c52 !important"><a href={`/posts/${next_page}`}>下一篇</a> | </span>}
+              {last_page && <span style="color:#a67c52 !important"><a href={`/posts/${last_page}`}>上一篇</a> | </span>}
+              <span style="color:#a67c52 !important"><a class="footer_a" href="/">去首页</a> | </span>
               <span style="color:#a67c52 !important"><a class="footer_a" href="https://github.com/hadesxiong/pm-weekly">Github</a> | </span>
               <a class="footer_a" href="https://github.com/hadesxiong/pm-weekly/blob/main/public/wechat.png?raw=true">WeChat</a>
             </p>
