--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -10,10 +10,10 @@ import HeaderLink from './HeaderLink.astro';
     title="Top Navigation"
   >
     <div class="logo flex md:ml-0 ml-4">
-      <a href="/pm-weekly" class="logo-image">
+      <a href="/" class="logo-image">
         <AstroLogo size={40} />
       </a>
-      <a href="/pm-weekly">
+      <a href="/">
         <h1>{CONFIG.SITE.title}</h1>
       </a>
     </div>
