--- a/src/components/Card/Card.astro
+++ b/src/components/Card/Card.astro
@@ -15,7 +15,7 @@ const { pic, desc, date } = post.frontmatter;
 >
   <img
     data-placeholder-background="linear-gradient(to bottom, #ece9e6, #ffffff)"
-    data-src={`${pic}?x-oss-process=image/resize,w_500`}
+    data-src={`${pic}`}
     class="lozad block md:w-80 md:h-48 w-96 h-52 rounded-t-md"
   />
   <div
